Addition of 2nd page.

--- a/Jeep-Site/page2.html
+++ b/Jeep-Site/page2.html
@@ -25,19 +25,48 @@
 			<section id="barcode-icon"></section>
 		</nav>
 
-		<section class="hero">
-			<div class="container-wrapper">
-				<div class="hero-sub-cont large-box">
-					<img src="assets/img/cherokee.png">
-				</div>
-				<div class="hero-sub-cont">
-					<img src="assets/img/kbb.png">
-				</div>
-				<div class="hero-sub-cont">
-					<img src="assets/img/sign-and-drive.png">
-				</div>
+		<section class="hero-p2">
+			<div class="hero-text-wrap">
+				<h1 class="large-text">Adventured Fueled By The Power Within</h1>
+				<h1 class="smaller-text">The New 2013 Wrangler</h1>
+				<p>A tought authentic legend born to rule the trails and the open road, the 2013 Jeep Wrangler is made to make everyday hehind the wheel, a thirlling adenture.</p>
 			</div>
 		</section>
+		
+		<section class="jeep-description-wrap">
+
+			<section class="jeep-description">
+
+				<div class="sales-price">
+					<h1>MSRP Starting at</h1>
+					<h2>$22,295</h2>
+					<h5>This is disclaimer information. it is a fairly small</h5>
+				</div>
+	
+				<div class="lease-price">
+					<h1> Lease for</h1>
+					<h2>$309</h2>
+					<h5>This is disclaimer information. it is fairly small</h5>
+				</div>
+	
+				<div class="classic-img">
+					<img src="assets/img/promo-header.png">
+				</div>
+	
+				
+			</section>
+
+		</section>
+
+		<div class="award">
+			<div class="award-pic">
+				<img src="assets/img/award-icon.png">
+			</div>
+			<p>The Jeep brand wins its third consecutive</p>
+			<p class="bold-award">"Four Wheeler of the Year" </p>
+			<p>award from Four Wheeler magzine</p>
+				
+		</div>
 
 		<footer class="footer">
 			<section class="link-wrap">
@@ -118,19 +147,3 @@
 
 			</div>
 		</footer>
-
-		<a href="page2.html">2nd Page</a>
-
-
-
-
-
-
-
-
-
-		
-
-		<script src="assets/js/main.js"></script>
-	</body>
-</html>
