--- a/Jeep-Site/index.html
+++ b/Jeep-Site/index.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<nav class="nav">
-			<section id="logo"></section>
+		<nav class="nav__">
+			<section id="nav__logo"></section>
 			<form>
 				<ul>
 					<li class="hovers">Home</li>
@@ -20,20 +20,21 @@
 					<li>Shopping Tools</li>
 					<li>Capability</li>
 					<li>Owners</li>
+					<li><a href="page2.html">2nd Page</a></li>
 				</ul>
 			</form>
-			<section id="barcode-icon"></section>
+			<section id="nav__barcode-icon"></section>
 		</nav>
 
-		<section class="hero">
-			<div class="container-wrapper">
-				<div class="hero-sub-cont large-box">
+		<section class="hero__">
+			<div class="hero__container-wrapper">
+				<div class="hero__sub-cont large-box">
 					<img src="assets/img/cherokee.png">
 				</div>
-				<div class="hero-sub-cont">
+				<div class="hero__sub-cont">
 					<img src="assets/img/kbb.png">
 				</div>
-				<div class="hero-sub-cont">
+				<div class="hero__sub-cont">
 					<img src="assets/img/sign-and-drive.png">
 				</div>
 			</div>
@@ -119,7 +120,7 @@
 			</div>
 		</footer>
 
-		<a href="page2.html">2nd Page</a>
+		
 
 
 
