--- a/Jeep-Site/page2.html
+++ b/Jeep-Site/page2.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<nav class="nav">
-			<section id="logo"></section>
+		<nav class="nav__">
+			<section id="nav__logo"></section>
 			<form>
 				<ul>
 					<li class="hovers">Home</li>
@@ -20,36 +20,37 @@
 					<li>Shopping Tools</li>
 					<li>Capability</li>
 					<li>Owners</li>
+					<li><a href="page2.html">2nd Page</a></li>
 				</ul>
 			</form>
-			<section id="barcode-icon"></section>
+			<section id="nav__barcode-icon"></section>
 		</nav>
 
-		<section class="hero-p2">
-			<div class="hero-text-wrap">
-				<h1 class="large-text">Adventured Fueled By The Power Within</h1>
-				<h1 class="smaller-text">The New 2013 Wrangler</h1>
+		<section class="hero__p2">
+			<div class="hero__text-wrap">
+				<h1 class="hero__large-text">Adventured Fueled By The Power Within</h1>
+				<h1 class="hero__smaller-text">The New 2013 Wrangler</h1>
 				<p>A tought authentic legend born to rule the trails and the open road, the 2013 Jeep Wrangler is made to make everyday hehind the wheel, a thirlling adenture.</p>
 			</div>
 		</section>
 		
-		<section class="jeep-description-wrap">
+		<section class="jeep-description__wrap">
 
-			<section class="jeep-description">
+			<section class="jeep-description__label">
 
-				<div class="sales-price">
+				<div class="jeep-description__sales-price">
 					<h1>MSRP Starting at</h1>
 					<h2>$22,295</h2>
 					<h5>This is disclaimer information. it is a fairly small</h5>
 				</div>
 	
-				<div class="lease-price">
+				<div class="jeep-description__lease-price">
 					<h1> Lease for</h1>
 					<h2>$309</h2>
 					<h5>This is disclaimer information. it is fairly small</h5>
 				</div>
 	
-				<div class="classic-img">
+				<div class="jeep-description__classic-img">
 					<img src="assets/img/promo-header.png">
 				</div>
 	
@@ -58,8 +59,8 @@
 
 		</section>
 
-		<div class="award">
-			<div class="award-pic">
+		<div class="award__">
+			<div class="award__pic">
 				<img src="assets/img/award-icon.png">
 			</div>
 			<p>The Jeep brand wins its third consecutive</p>
