Greg, Look at this code not previous.

--- a/Jeep-Site/page2.html
+++ b/Jeep-Site/page2.html
@@ -30,7 +30,9 @@
 			<div class="hero__text-wrap">
 				<h1 class="hero__large-text">Adventured Fueled By The Power Within</h1>
 				<h1 class="hero__smaller-text">The New 2013 Wrangler</h1>
-				<p>A tought authentic legend born to rule the trails and the open road, the 2013 Jeep Wrangler is made to make everyday hehind the wheel, a thirlling adenture.</p>
+				<div class="overlay">
+					<p>A tought authentic legend born to rule the trails and the open road, the 2013 Jeep Wrangler is made to make everyday hehind the wheel, a thirlling adenture.</p>
+				</div>
 			</div>
 		</section>
 		
